add all new features